--- a/frontend/saf/index.html
+++ b/frontend/saf/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>React App</title>
+      <link href="/src/style.css" rel="stylesheet">
+
   </head>
   <body>
     <div id="root"></div>
